# piim

./: CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/agent_docs/: architecture.md
docs/superpowers/plans/: 2026-03-13-piim-implementation.md
docs/superpowers/specs/: 2026-03-13-piim-design.md
piim/: __init__.py  __main__.py  cli.py  exporter.py  extractor.py  masker.py  models.py
piim/detector/: __init__.py  base.py  presidio.py
tests/: conftest.py  test_cli.py  test_detector.py  test_exporter.py  test_extractor.py  test_integration.py  test_masker.py  test_models.py
