[project]
name = "piim"
version = "0.1.0"
description = "Detect and mask PII in PDF files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyMuPDF>=1.25.0",
    "easyocr>=1.7.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "Faker>=33.0.0",
]

[project.scripts]
piim = "piim.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
