[project]
name = "piim"
version = "0.1.0"
description = "Detect and mask PII in PDF files"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "PyMuPDF>=1.25.0",
    "easyocr>=1.7.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "Faker>=33.0.0",
    "pip>=26.0.1",
]

[project.scripts]
piim = "piim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
